--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+#???
+server.port=9090
 
+#???
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/backmanage?useUnicode=true&useJDBCCompliantTimezoneShift=true&serverTimezone=UTC&characterEncoding=utf8
+spring.datasource.username=root
+spring.datasource.password=111111
+spring.jpa.database=MySQL
+spring.jpa.show-sql=true
