--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -5,6 +5,13 @@ server.port=9090
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/backmanage?useUnicode=true&useJDBCCompliantTimezoneShift=true&serverTimezone=UTC&characterEncoding=utf8
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=111111
 spring.jpa.database=MySQL
 spring.jpa.show-sql=true
+
+
+#mybatis?????
+mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.type-aliases-package: com.zhg.demo.mybatis.entity
+#??????
+mybatis.configuration.map-underscore-to-camel-case: true
