--- a/back/pom.xml
+++ b/back/pom.xml
@@ -52,6 +52,11 @@
             <artifactId>pagehelper-spring-boot-starter</artifactId>
             <version>1.4.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>4.2.0</version>
+        </dependency>
     </dependencies>
 
     <build>
