--- a/before/package.json
+++ b/before/package.json
@@ -10,6 +10,7 @@
     "@element-plus/icons-vue": "^0.2.4",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "echarts": "^5.4.0",
     "element-plus": "^1.3.0-beta.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
